--- a/Tackanje/Base.lproj/Main.storyboard
+++ b/Tackanje/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -289,7 +290,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="title" destination="zhc-hD-Yg8" id="bgO-GQ-xru"/>
-                                            <segue destination="oAc-Sg-t8l" kind="presentation" id="UGt-46-9P1"/>
+                                            <segue destination="9TI-LH-rt5" kind="show" id="6pi-Eu-bkx"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -316,10 +317,41 @@
             </objects>
             <point key="canvasLocation" x="1277" y="1566"/>
         </scene>
-        <!--Gostovanje View Controller-->
+        <!--Gostuj Sejo Table Controller-->
+        <scene sceneID="UcM-yk-04z">
+            <objects>
+                <tableViewController id="9TI-LH-rt5" customClass="GostujSejoTableController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Mdx-qY-tuE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="seje" id="uuf-qZ-iF0">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uuf-qZ-iF0" id="ghS-rX-I8I">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="oAc-Sg-t8l" kind="presentation" modalTransitionStyle="flipHorizontal" id="wyW-rn-MKq"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9TI-LH-rt5" id="JzE-be-W6k"/>
+                            <outlet property="delegate" destination="9TI-LH-rt5" id="yCj-gV-wQe"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kiV-AU-lL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2140" y="1566"/>
+        </scene>
+        <!--GostovanjeQR View Controller-->
         <scene sceneID="iaN-JA-Yag">
             <objects>
-                <viewController id="E0h-5U-9bV" customClass="GostovanjeViewController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="E0h-5U-9bV" customClass="GostovanjeQRViewController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jPG-fZ-gMn"/>
                         <viewControllerLayoutGuide type="bottom" id="r3M-4O-9Wl"/>
@@ -328,26 +360,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Naprava je zaklenjena, obiskovalci se lahko prijavijo na predmet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaK-cs-co7">
-                                <rect key="frame" x="20" y="193" width="295" height="141"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Naprava je zaklenjena, obiskovalci se lahko prijavijo na predmet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaK-cs-co7">
+                                <rect key="frame" x="20" y="72" width="560" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="dLO-Fi-gsz"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ohR-Is-uVs">
+                                <rect key="frame" x="20" y="101" width="560" height="479"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ohR-Is-uVs" secondAttribute="height" multiplier="1:1" id="2fD-Ha-gcE"/>
+                                    <constraint firstAttribute="width" secondItem="ohR-Is-uVs" secondAttribute="height" multiplier="280:243" id="9rh-Vl-qZv"/>
+                                    <constraint firstAttribute="width" secondItem="ohR-Is-uVs" secondAttribute="height" multiplier="1:1" id="Uid-Af-w5i"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="2fD-Ha-gcE"/>
+                                        <exclude reference="9rh-Vl-qZv"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ohR-Is-uVs" firstAttribute="leading" secondItem="xaK-cs-co7" secondAttribute="leading" id="39S-eL-tcB"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="ohR-Is-uVs" secondAttribute="leading" id="6lk-8X-BKr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ohR-Is-uVs" secondAttribute="trailing" id="AXV-gt-CwZ"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="ohR-Is-uVs" secondAttribute="leading" id="JVf-KP-NEJ"/>
+                            <constraint firstItem="ohR-Is-uVs" firstAttribute="top" secondItem="xaK-cs-co7" secondAttribute="bottom" constant="8" id="Jbf-FR-Ygl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ohR-Is-uVs" secondAttribute="trailing" id="Yss-M2-rsC"/>
+                            <constraint firstItem="r3M-4O-9Wl" firstAttribute="top" secondItem="ohR-Is-uVs" secondAttribute="bottom" constant="13" id="ceH-El-ehD"/>
+                            <constraint firstItem="r3M-4O-9Wl" firstAttribute="top" secondItem="ohR-Is-uVs" secondAttribute="bottom" constant="13" id="cz9-Ep-SgD"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xaK-cs-co7" secondAttribute="trailing" id="ebq-J5-vFl"/>
+                            <constraint firstItem="xaK-cs-co7" firstAttribute="top" secondItem="jPG-fZ-gMn" secondAttribute="bottom" constant="8" id="f65-7v-pcc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ohR-Is-uVs" secondAttribute="trailing" id="ifN-Wk-0J2"/>
+                            <constraint firstItem="r3M-4O-9Wl" firstAttribute="top" secondItem="ohR-Is-uVs" secondAttribute="bottom" constant="20" id="kxh-Ds-kV3"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="xaK-cs-co7" secondAttribute="leading" id="qld-FP-LJb"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="ohR-Is-uVs" secondAttribute="leading" id="rBf-Yv-V05"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6lk-8X-BKr"/>
+                                <exclude reference="AXV-gt-CwZ"/>
+                                <exclude reference="JVf-KP-NEJ"/>
+                                <exclude reference="Jbf-FR-Ygl"/>
+                                <exclude reference="Yss-M2-rsC"/>
+                                <exclude reference="ceH-El-ehD"/>
+                                <exclude reference="cz9-Ep-SgD"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="trq-Wu-WXO">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="BzS-qs-45F">
                             <connections>
-                                <segue destination="9Ca-KH-KJR" kind="presentation" id="7fg-Gy-ruq"/>
+                                <segue destination="9Ca-KH-KJR" kind="presentation" modalTransitionStyle="flipHorizontal" id="7fg-Gy-ruq"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="qr" destination="ohR-Is-uVs" id="yNy-9B-5df"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ZI-2r-sGD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2765" y="1566"/>
+            <point key="canvasLocation" x="3583" y="1566"/>
         </scene>
         <!--Predmeti-->
         <scene sceneID="1OU-p3-1jM">
@@ -403,7 +482,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nLe-k9-LdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1953" y="1566"/>
+            <point key="canvasLocation" x="2881" y="1566"/>
         </scene>
     </scenes>
     <resources>
