--- a/Tackanje/Base.lproj/Main.storyboard
+++ b/Tackanje/Base.lproj/Main.storyboard
@@ -260,12 +260,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Wf-0W-h14">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3Wf-0W-h14">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="gostovanjeCell" id="tUe-LD-bSQ" customClass="GostovanjeTableViewCell" customModule="Tackanje" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tUe-LD-bSQ" id="NvW-mc-SgB">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -289,7 +289,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="title" destination="zhc-hD-Yg8" id="bgO-GQ-xru"/>
-                                            <segue destination="9TI-LH-rt5" kind="show" id="6pi-Eu-bkx"/>
+                                            <segue destination="Apd-4x-gg6" kind="show" identifier="izberiSejo" id="nHS-iz-ijZ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -322,37 +322,6 @@
             </objects>
             <point key="canvasLocation" x="1277" y="1566"/>
         </scene>
-        <!--Gostuj Sejo Table Controller-->
-        <scene sceneID="UcM-yk-04z">
-            <objects>
-                <tableViewController id="9TI-LH-rt5" customClass="GostujSejoTableController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Mdx-qY-tuE">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="seje" id="uuf-qZ-iF0">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uuf-qZ-iF0" id="ghS-rX-I8I">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="oAc-Sg-t8l" kind="presentation" modalTransitionStyle="flipHorizontal" id="wyW-rn-MKq"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="9TI-LH-rt5" id="JzE-be-W6k"/>
-                            <outlet property="delegate" destination="9TI-LH-rt5" id="yCj-gV-wQe"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kiV-AU-lL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2140" y="1566"/>
-        </scene>
         <!--Dodaj Predmet View Controller-->
         <scene sceneID="gqX-J2-Swt">
             <objects>
@@ -365,12 +334,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Naziv predmeta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zQU-bG-6ao">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Naziv predmeta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zQU-bG-6ao">
                                 <rect key="frame" x="20" y="72" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Opis predmeta" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="frj-Jx-mxz">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="Opis predmeta" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="frj-Jx-mxz">
                                 <rect key="frame" x="20" y="110" width="560" height="120"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -380,7 +349,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" address="YES" calendarEvent="YES"/>
                             </textView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Povezava do predmeta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A2T-8T-KCJ">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Povezava do predmeta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A2T-8T-KCJ">
                                 <rect key="frame" x="20" y="238" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -410,12 +379,12 @@
                         <outlet property="nazivPredmeta" destination="zQU-bG-6ao" id="bRw-Ss-yeM"/>
                         <outlet property="opisPredmeta" destination="frj-Jx-mxz" id="PqQ-7I-mvd"/>
                         <outlet property="povezava" destination="A2T-8T-KCJ" id="Scf-z8-p3c"/>
-                        <segue destination="9TI-LH-rt5" kind="show" identifier="gostuj" id="d7M-nE-ylE"/>
+                        <segue destination="7Zq-IW-vg8" kind="show" identifier="gostuj" id="PMg-X8-c8d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mmE-vt-Fv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1292" y="2318"/>
+            <point key="canvasLocation" x="1277" y="2322"/>
         </scene>
         <!--GostovanjeQR View Controller-->
         <scene sceneID="iaN-JA-Yag">
@@ -440,7 +409,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4ZI-2r-sGD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3583" y="1566"/>
+            <point key="canvasLocation" x="3407" y="1554"/>
         </scene>
         <!--Predmeti-->
         <scene sceneID="1OU-p3-1jM">
@@ -496,7 +465,114 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nLe-k9-LdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2881" y="1566"/>
+            <point key="canvasLocation" x="2705" y="1554"/>
+        </scene>
+        <!--Gostuj Sejo2 View Controller-->
+        <scene sceneID="Nw8-Wl-9F0">
+            <objects>
+                <viewController id="Apd-4x-gg6" customClass="GostujSejo2ViewController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TIg-nB-48W"/>
+                        <viewControllerLayoutGuide type="bottom" id="1SY-Wh-Zp9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2kD-eU-1sq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2dT-TS-BV5">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="seje" textLabel="T0o-qH-zOJ" style="IBUITableViewCellStyleDefault" id="awq-Vb-r5c" customClass="GostovanjeTableViewCell" customModule="Tackanje" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="awq-Vb-r5c" id="mXV-Ko-55Q">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="T0o-qH-zOJ">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="oAc-Sg-t8l" kind="presentation" identifier="qr" id="4Sr-If-vpl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Apd-4x-gg6" id="cAq-u0-c0S"/>
+                                    <outlet property="delegate" destination="Apd-4x-gg6" id="Cw5-JC-K2W"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="2dT-TS-BV5" secondAttribute="trailing" id="2fp-i7-0Gf"/>
+                            <constraint firstItem="2dT-TS-BV5" firstAttribute="bottom" secondItem="1SY-Wh-Zp9" secondAttribute="top" id="UKi-6D-FL6"/>
+                            <constraint firstItem="2dT-TS-BV5" firstAttribute="leading" secondItem="2kD-eU-1sq" secondAttribute="leading" id="aKn-Da-AsE"/>
+                            <constraint firstItem="2dT-TS-BV5" firstAttribute="top" secondItem="2kD-eU-1sq" secondAttribute="top" id="u6K-Ql-owK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3Fg-ol-35x">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aLw-LB-G0r">
+                            <connections>
+                                <segue destination="PeS-QI-YqH" kind="show" identifier="dodajSejo" id="LBX-UJ-gGG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="2dT-TS-BV5" id="x9T-Yr-Asl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="scC-V0-s7x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2025" y="1566"/>
+        </scene>
+        <!--Dodaj Sejo View Controller-->
+        <scene sceneID="7p9-Xs-Ass">
+            <objects>
+                <viewController id="PeS-QI-YqH" customClass="DodajSejoViewController" customModule="Tackanje" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vbL-CY-wyf"/>
+                        <viewControllerLayoutGuide type="bottom" id="EBW-n1-bxy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iUQ-Qa-wjR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tema seje" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iiW-5T-uSE">
+                                <rect key="frame" x="20" y="28" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iiW-5T-uSE" firstAttribute="top" secondItem="vbL-CY-wyf" secondAttribute="bottom" constant="8" symbolic="YES" id="N84-99-BX9"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="iiW-5T-uSE" secondAttribute="leading" id="Sdr-Jm-zMa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iiW-5T-uSE" secondAttribute="trailing" id="aQx-2k-9xm"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="n1j-ZK-nXy">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Y4Y-AF-xw1">
+                            <connections>
+                                <action selector="save:" destination="PeS-QI-YqH" id="bWn-bY-FQZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tema" destination="iiW-5T-uSE" id="aQm-yo-vrP"/>
+                        <segue destination="Apd-4x-gg6" kind="show" identifier="gostujSeje" id="Dmu-gD-ecZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hdn-tM-a6s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2025" y="2322"/>
         </scene>
     </scenes>
     <resources>
@@ -505,7 +581,8 @@
         <image name="Virtual Machine Filled-50" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RZb-34-IHU"/>
-        <segue reference="d7M-nE-ylE"/>
+        <segue reference="7fg-Gy-ruq"/>
+        <segue reference="PMg-X8-c8d"/>
+        <segue reference="Dmu-gD-ecZ"/>
     </inferredMetricsTieBreakers>
 </document>
