--- a/Tackanje/Base.lproj/Main.storyboard
+++ b/Tackanje/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="Dch-tG-7tj" kind="show" id="YoP-i7-e9p"/>
+                                            <segue destination="Dch-tG-7tj" kind="show" identifier="porocanje" id="YoP-i7-e9p"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -98,7 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ouW-4a-Iea" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2372" y="-44"/>
+            <point key="canvasLocation" x="2047" y="348"/>
         </scene>
         <!--Prijava na sejo-->
         <scene sceneID="kKg-71-MYc">
